crates/plotnik-lib/tests/02-parser/recovery_validation/category_loose_hash_before_only_rejected.txt
Q = (expression #binary_expression)
==== diagnostics ====
error: expected a child node, or `)` to close
 --> query.ptk:1:17
  |
1 | Q = (expression #binary_expression)
  |                 ^
